// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`padding no padding 1`] = `
.c0 {
  display: grid;
}

<div
  class="c0"
>
  content
</div>
`;

exports[`padding padding 1`] = `
.c0 {
  display: grid;
  padding: 10px;
}

<div
  class="c0"
>
  content
</div>
`;
